added entityId
