# swagger/swagger.json
@@ -2241,6 +2241,10 @@
             "type": "string",
             "description": "ACS URL"
           },
+          "entityId": {
+            "type": "string",
+            "description": "Entity ID"
+          },
           "logoUrl": {
             "type": "string",
             "description": "Logo URL"
